# devnet-blog.github.io

./: .gitignore  404.html  CHANGELOG.md  CNAME  Makefile  README.md  archive.html  archives.html  authors.html  categories.html  first-post.html  index.html  index2.html  pelicanconf.py  publishconf.py  pyproject.toml  requirements.txt  tags.html  tasks.py
.github/workflows/: build.yml
about/: index.html
author/: damian-dec.html  kamil-urbanek-damian-dec.html  kamil-urbanek.html
authors/: index.html
authors/damian-dec/: index.html
authors/kamil-urbanek/: index.html
categories/: index.html
categories/articles/: index.html
categories/general/: index.html
categories/snippets/: index.html
category/: articles.html  articles2.html  dev.html  general.html  snippets.html
content/articles/: Are there any comments.md  behind_curtains.md  damian_post.md  first_post.md  howto.md  i_do_not.md  kamil_post.md  lukasz_post.md  md_test.md  set_logger.md  welcome.md
content/author/: damian-dec.md  kamil-urbanek.md
content/authors/: damian-dec.md  kamil-urbanek.md
content/pages/: about.md  error-404.md
docs/: README.md
documentation/: README.md
output/: archives.html  authors.html  categories.html  first-post.html  index.html  tags.html
pages/: about.html  kamil-urbane.html
posts/: behind-curtains.html  damians-post.html  draft-i-do-not.html  first-post.html  how-to-write-articles.html  i-do-not.html  lukaszs-post.html  markdown-in-pelican.html  nothing-important.html  set-logger.html  test-of-markdown-extensions.html  welcome.html
tags/: index.html
(+29 files in other folders)
