[tool.poetry]
name = "devnet-blog.github.io"
version = "0.1.0"
description = ""
authors = ["Kamil Urbanek <urbanek.kamil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.7.1"}
typogrify = "^2.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
